docs/release1/ai-tools.md
# Usage of AI tools in group 8's project (Twitter clone)

We, as members of group 8, believe that AI has changed the software development field drastically in a very short time.
However, we also believe that software developers must understand the AI tools they use, and always confirm the output - whether that is text or code.

If AI is used by group 8's members, it is usually to explain concepts, discuss possibilities or use it as a sort of search engine.
Asking AI, particularly large language models (LLMs) to generate code for you, may have undesirable consequences.
If the programmer does not understand the output, but uses it either way, it may take away the opportunities to learn new technologies.
Furthermore, AI often does not consider things like code maintenance or structure - this causes code generated by LLMs to often become unmaintainable and difficult to work with.

Of course, AI usage doesn't need to be only negative.
Some members of group 8 have enabled AI technologies in their IDE, such as GitHub Copilot or other AI-assisted tooling.
These tools may increase the efficiency of the developer, but again, it is important to verify the output and do thorough testing.
Any code snippets generated by these tools will also be documented with comments in the code, just like the project requirements state.

All in all, AI tools can increase efficiency and can be a great tool to use for brainstorming, ideas and sometimes problem solving (e.g. by using an LLM to perform some kind of [rubber duck debugging](https://en.wikipedia.org/wiki/Rubber_duck_debugging)).
We think however, that the programmer themselves should still be in the driver's seat. If we give LLMs full responsibility for our code, we will learn much less and it will very likely result in code of medium quality. We strive to deliver products that are easy to use and have good performance - these are things that LLMs may neglect.
The reasoning outlined in this document is the reason group 8 uses AI tools moderately, at the same time understanding the programmer themselves should be the person responsible for the code quality, performance, documentation and maintainability.
