docs/release3/ai-tools.md
# Usage of AI tools in group 8's project (Twitter clone)

We, as members of group 8, believe that AI has changed the software development field drastically in a very short time.
However, we also believe that software developers must understand the AI tools they use, and always confirm the output - whether that is text or code.

If AI is used by group 8's members, it is usually to explain concepts, discuss possibilities or use it as a sort of search engine.
Asking AI, particularly large language models (LLMs) to generate code for you, may have undesirable consequences.
If the programmer does not understand the output, but uses it either way, it may take away the opportunities to learn new technologies.
Furthermore, AI often does not consider things like code maintenance or structure - this causes code generated by LLMs to often become unmaintainable and difficult to work with.

Of course, AI usage doesn't need to be only negative.
Some members of group 8 have enabled AI technologies in their IDE, such as GitHub Copilot or other AI-assisted tooling.
These tools may increase the efficiency of the developer, but again, it is important to verify the output and do thorough testing.
Any code snippets generated by these tools will also be documented with comments in the code, just like the project requirements state.

One example of AI usage in our project is that we use AI-assisted tools like Copilot to help write Javadocs.
This helps us save time on documentation while ensuring consistency and completeness in describing classes, methods, etc.
Of course, in this case as well, team members review and adjust the generated text to ensure accuracy and clarity.

Furthermore, over time, some members of the group have seen benefit of generating some simple methods using tools like OpenAI's GPT models, or GitHub Copilot.
We have seen the value and potential efficiency increase of using LLMs to automate or speed up repetetive or boring tasks.
At the same time, we have understood and experienced that this could potentially lead to errors if the output is not verified properly.
Thankfully, there are multiple steps in our workflow that help us avoid these issues.
Two important things that come into mind are the following:

- Careful code reviews, as can be seen in our GitHub pull request history
  - These include multiple rounds of feedback, descriptions, bug catches, discussions and similar
- As well as our unit and integration tests catching issues with new features

Our app now also includes a proper REST API. This involves authentication which is dependent on secret values, for example those stored in `twitter-clone/api/src/main/java/resources/application.properties`.
We have taken the opportunity to understand the risks of possibly exposing these secrets to LLMs and avoiding this as much as possible.
For GitHub Copilot, the file is not sent to the chatbot when sharing the code.
For other chatbots used in the browser, the content of such secrets are never pasted in.
This is to conform to industry standards and keep our users' passwords safe.

All in all, AI tools can increase efficiency and can be a great tool to use for brainstorming, ideas and sometimes problem solving (e.g. by using an LLM to perform some kind of [rubber duck debugging](https://en.wikipedia.org/wiki/Rubber_duck_debugging)).
We think however, that the programmer themselves should still be in the driver's seat. If we give LLMs full responsibility for our code, we will learn much less and it will very likely result in code of medium quality. We strive to deliver products that are easy to use and have good performance - these are things that LLMs may neglect.
The reasoning outlined in this document is the reason group 8 uses AI tools moderately, at the same time understanding the programmer themselves should be the person responsible for the code quality, performance, documentation and maintainability.
